--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--app-head-->
   </head>
@@ -10,6 +9,6 @@
     <div id="app"><!--app-html--></div>
 
     <!--app-scripts-->
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="/src/client/index.tsx"></script>
   </body>
 </html>
