--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--app-head-->
   </head>
   <body>
-    <div id="app"><!--app-html--></div>
-
-    <!--app-scripts-->
+    <div id="app"></div>
     <script type="module" src="/src/client/index.tsx"></script>
   </body>
 </html>
